# Dev_RisLib

./: CMakeLists.txt  CMakeSettings.json  MyCMake.cmake
CommonLib/: procoSerialSettings.cpp
Parms/: Parms.cpp
RisLib/: CMakeLists.txt  RisLibConfig.cmake  prnPrintSettings.cpp  prnPrint_linux.cpp  prnPrint_win.cpp  risAlphaDir_win.cpp  risCmdLineParms.cpp  risCmdLineParms.h
